--- a/book/03.md
+++ b/book/03.md
@@ -1,83 +1,200 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mampu menginstall bootstrap4 pada angular
+- Peserta mampu membuat Form TODO
+- peserta mampu membuat datepicker https://ng-bootstrap.github.io/#/components/datepicker/overview
 
-# Percobaan 2 Install bootstrap 4 pada angular
+# Percobaan membuat Form
 
-### Instalasi bootstrap 4
-
-- buka terminal **(cat: pastikan proses install di folder oshop)**
-- ketik kode berikut
+- buka file **app.component.html** tambahkan code berikut
 
 ```
-npm i --save bootstrap@4
-```
-- buka angular.json **(oshop/angular.json)**
-- tambahkan code berikut pada styles angular.json pada project olshop
+<div class="container">
+  <div class="row"><h2 class="title">ToDO Application</h2></div>
 
-```
-"node_modules/bootstrap/dist/css/bootstrap.min.css",
-```
-- sehingga hasil code nya seperti ini
-
-```
-"styles": [
-  "node_modules/bootstrap/dist/css/bootstrap.min.css",
-  "styles.scss"
-]
-```
-- buka file **app.component.html** **(oshop/app/app.component.html)**
-- tambahkan code berikut 
-
-```
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+  <div class="row">
+    <form class="form-inline">
+      <div class="form-row">
+        <div class="col-md-5">
+          <input type="text" name="" value="" placeholder="ToDo Title" />
         </div>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        <div class="col-md-5"><input type="date" /></div>
+        <div class="col-md-2"><button class="btn btn-primary">Add</button></div>
+      </div>
     </form>
   </div>
-</nav>
+</div>
 
-<div class="container">
+```
 
-  <div class="starter-template">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+- jika berhasil maka hasilnya seperti pada gambar berikut
+![](image/chapter1/img6.png)
+
+## menambahkan datepicker
+
+- https://ng-bootstrap.github.io/#/components/datepicker/overview
+- copy code datepicker berikut  dan paste ke **app.component.html**
+
+```
+<div class="form-group">
+    <div class="input-group">
+      <input class="form-control" placeholder="yyyy-mm-dd"
+             name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+      </div>
+    </div>
   </div>
-</div><!-- /.container -->
-```
-- untuk melihat hasilnya ketik **ng serve** ->img4.png
-![](image/chapter1/img4.png)
-
-- tambahkan code berikut pada **styles.css** **(olshop/src/styles.css)**
 
 ```
-body {padding-top: 80px};
+- buka file **app.component.html** dan modifikasi menjadi seperti pada gambar berikut
+
 ```
-- sehingga hasilnya menjadi 
-![](image/chapter1/img5.png)
+<div class="container">
+  <div class="row"><h2 class="title">ToDO Application</h2></div>
+
+  <div class="row">
+    <form class="form-inline">
+      <div class="form-row">
+        <div class="col-md-5">
+          <input type="text" name="title" class="form-control" placeholder="ToDo Title" autocomplete="off"/>
+        </div>
+        <div class="col-md-5">
+          <!-- <input type="date" /> -->
+          <div class="form-group">
+              <div class="input-group">
+                <input class="form-control" placeholder="completion Date"
+                       name="dp" ngbDatepicker #d="ngbDatepicker" autocomplete="off">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-2"><button class="btn btn-primary">Add</button></div>
+      </div>
+    </form>
+  </div>
+</div>
+
+
+```
+
+- buka file **app.component.css** tambahkan code berikut 
+
+```
+body {
+    font-size: 15px;
+    color: #343d44;
+    font-family: 'segoe-ui', 'open-sans', tahoma, arial;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .container {
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  .row {
+    margin: 0 auto;
+    text-align: center;
+    padding: 30px;
+  }
+  
+  .title {
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  .form-inline {
+    margin: 0 auto;
+    text-align: center;
+  }
+  
+  table {
+    border-collapse: separate;
+    border-spacing: 0 5px;
+  }
+  
+  thead th {
+    background-color: #007bff;
+    color: white;
+  }
+  
+  tbody td {
+    background-color: #eeeeee;
+  }
+  
+  tr td:first-child,
+  tr th:first-child {
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+  }
+  
+  tr td:last-child,
+  tr th:last-child {
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+  }
+  
+  .btn {
+    cursor: pointer;
+  }
+  
+  td {
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  
+  .icons button {
+    margin: 0px 5px 0px 5px;
+  }
+  
+  .fa-circle-o,
+  .fa-check-circle {
+    color: #007bff;
+  }
+  
+  .empty {
+    border: 1px solid red;
+  }
+  ```
+- https://www.npmjs.com/package/angular-font-awesome install angular-font-awesome untuk menampillakn fa fa-calender
+
+- ketik perintah berikut:
+
+```
+npm install --save font-awesome angular-font-awesome
+```
+
+- buka file **app.module.ts** tambahkan code berikut
+
+```
+//...
+import { AngularFontAwesomeModule } from 'angular-font-awesome';
+@NgModule({
+  //...
+  imports: [
+    //...
+    AngularFontAwesomeModule
+  ],
+  //...
+})
+export class AppModule { }
+
+```
+
+- buka file **angular.json** tambahkan code berikut
+
+```
+ "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "src/styles.css"
+            ],
+
+```
+- jika berhasil maka tampilannya akan seperti pada gambar dibawah ini
+![](image/chapter1/img7.png)
