--- a/book/06.md
+++ b/book/06.md
@@ -1,83 +1,29 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mampu menambahkan @ng-bootstrap https://ng-bootstrap.github.io/#/home
+- Peserta mampu membuat service todo
 
-# Percobaan 5 Menambahkan @ng-bootstrap 
+# Percobaan membuat service
 
-- sebelum menambahkan menu pada drop-down maka terlebih dahulu install ng-bootstrap code sebagai berikut:
-
-```
-npm i --save @ng-bootstrap/ng-bootstrap
-
-```
-- import ng-bootstrap pada **app.module.ts** code Sebagai berikut:
-
-```
-import { NgbModule} from '@ng-bootstrap/ng-bootstrap';
-```
-- tambahkan juga pada imports:
-
-```
- NgbModule.forRoot(),
-
-```
-- sehingga keseluruhan code pada **app.module.ts**
+- karena kita bekerja menggunakan form maka terlebih dahulu kita **import FormModule**
+- buka file **app.module.ts** tambahkan **FormModule** sehingga hasil keseluruhan codenya menjadi seperti berikut:
 
 ```
 import { BrowserModule } from '@angular/platform-browser';
 import { NgModule } from '@angular/core';
-import { AngularFireModule } from 'angularfire2';
-import { AngularFireDatabaseModule } from 'angularfire2/database';
-import { AngularFireAuthModule } from 'angularfire2/auth';
-import { environment } from 'src/environments/environment';
-import { RouterModule} from '@angular/router';
-import { NgbModule} from '@ng-bootstrap/ng-bootstrap';
-
+import { NgbModule } from '@ng-bootstrap/ng-bootstrap';
+import { AngularFontAwesomeModule } from 'angular-font-awesome';
 import { AppComponent } from './app.component';
-import { BsNavbarComponent } from './bs-navbar/bs-navbar.component';
-import { HomeComponent } from './home/home.component';
-import { ProductsComponent } from './products/products.component';
-import { ShoppingChartComponent } from './shopping-chart/shopping-chart.component';
-import { CheckOutComponent } from './check-out/check-out.component';
-import { OrderSuccessComponent } from './order-success/order-success.component';
-import { MyOrdersComponent } from './my-orders/my-orders.component';
-import { AdminProductsComponent } from './admin/admin-products/admin-products.component';
-import { AdminOrdersComponent } from './admin/admin-orders/admin-orders.component';
-import { LoginComponent } from './login/login.component';
+import { FormsModule } from '@angular/forms';
 
 @NgModule({
   declarations: [
-    AppComponent,
-    BsNavbarComponent,
-    HomeComponent,
-    ProductsComponent,
-    ShoppingChartComponent,
-    CheckOutComponent,
-    OrderSuccessComponent,
-    MyOrdersComponent,
-    AdminProductsComponent,
-    AdminOrdersComponent,
-    LoginComponent
+    AppComponent
   ],
   imports: [
     BrowserModule,
-    AngularFireModule.initializeApp(environment.firebase),
-    AngularFireDatabaseModule,
-    AngularFireAuthModule,
-    NgbModule.forRoot(),
-    RouterModule.forRoot(
-      [
-        {path:'',component:HomeComponent},
-        {path:'products',component:ProductsComponent},
-        {path:'shopping-chart',component:ShoppingChartComponent},
-        {path:'check-out',component:CheckOutComponent},
-        {path:'order-success',component:OrderSuccessComponent},
-        {path:'login',component:LoginComponent},
-        {path:'admin/admin-products',component:AdminProductsComponent},
-        {path:'admin/admin-orders',component:AdminOrdersComponent},
-        
-      ]
-    )
+    NgbModule,
+    AngularFontAwesomeModule,
+    FormsModule
   ],
   providers: [],
   bootstrap: [AppComponent]
@@ -85,20 +31,160 @@ import { LoginComponent } from './login/login.component';
 export class AppModule { }
 
 ```
-- buka file **bs-navbar.component.html** dan rubah code pada menu dropdown menjadi seperti berikut:
+- buka file **app.component.html** tambahkan **fungsi click** 
 
 ```
-    <!-- edit dropdown -->
-      <li ngbDropdown class="nav-item dropdown show">
-        <a ngbDropdownToggle class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div ngbDropdownMenu class="dropdown-menu show" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+ <div class="col-md-2"><button class="btn btn-primary" (click)="addTodo()">Add</button></div>
+```
+- sehinga keseluruhan codenya menjadi seperti berikut:
+
+```
+<div class="container">
+  <div class="row"><h2 class="title">ToDO Application</h2></div>
+
+  <div class="row">
+    <form class="form-inline">
+      <div class="form-row">
+        <div class="col-md-5">
+          <input
+            type="text"
+            name="title"
+            class="form-control"
+            placeholder="ToDo Title"
+            autocomplete="off"
+          />
         </div>
-      </li>
+        <div class="col-md-5">
+          <!-- <input type="date" /> -->
+          <div class="form-group">
+            <div class="input-group">
+              <input
+                class="form-control"
+                placeholder="completion Date"
+                name="dp"
+                ngbDatepicker
+                #d="ngbDatepicker"
+                autocomplete="off"
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-outline-secondary calendar"
+                  (click)="d.toggle()"
+                  type="button"
+                >
+                  <i class="fa fa-calendar" aria-hidden="true"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2"><button class="btn btn-primary" (click)="addTodo()">Add</button></div>
+      </div>
+    </form>
+  </div>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Date</th>
+        <th>Status</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td>Dian Inggit</td>
+        <td>05-10-1985</td>
+        <td>not complete</td>
+        <td class="icons">
+          <button class="btn btn-success"><i class="fa fa-check"></i></button>
+          <button class="btn btn-primary"><i class="fa fa-pencil"></i></button>
+          <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
 
 ```
-- jika berhasil maka hasilnya seperti pada gambar :
+- buka file **app.component.ts** buatlah method **addTodo**
 
-![](image/chapter1/img8.png)
+```
+import { Component } from '@angular/core';
+
+@Component({
+  selector: 'app-root',
+  templateUrl: './app.component.html',
+  styleUrls: ['./app.component.css']
+})
+export class AppComponent {
+  constructor(){}
+  addTodo(){}
+}
+```
+
+- buatlah sebuah service **ket: g->generate, s->service, services->namafolder, todo-data->namafile**
+
+```
+ng g s services/todo-data
+```
+- buka file **app.module.ts** tambahkan **todoservices** seperti code dibawah ini 
+
+```
+import { BrowserModule } from '@angular/platform-browser';
+import { NgModule } from '@angular/core';
+import { NgbModule } from '@ng-bootstrap/ng-bootstrap';
+import { AngularFontAwesomeModule } from 'angular-font-awesome';
+import { AppComponent } from './app.component';
+import { FormsModule } from '@angular/forms';
+import { TodoDataService } from './services/todo-data.service';
+
+@NgModule({
+  declarations: [
+    AppComponent
+  ],
+  imports: [
+    BrowserModule,
+    NgbModule,
+    AngularFontAwesomeModule,
+    FormsModule
+  ],
+  providers: [TodoDataService],
+  bootstrap: [AppComponent]
+})
+export class AppModule { }
+
+```
+
+- buka file **to-do.service.ts** tambahkan code berikut
+
+```
+import { Injectable } from '@angular/core';
+import { Todo } from '../class/todo';
+
+@Injectable({
+  providedIn: 'root'
+})
+export class TodoDataService {
+
+  lastid=0;
+  todos:Todo[]=[]
+
+  constructor() { }
+
+  getAllTodos(){
+    const storageItem = JSON.parse(window.localStorage.getItem('app-todos'));
+    if (storageItem===null){
+      return [];
+    }else{
+      return storageItem.todos;
+    }
+  }
+
+}
+
+```
