--- a/book/08.md
+++ b/book/08.md
@@ -1,81 +1,187 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mampu Develop dengan firebase
+- Peserta mampu menyimpan todo di localstorage
 
-# Percobaan 7 
-- install firebase tools dengan cara
-
-```
-npm install -g firebase-tools 
-```
-atau
+# Percobaan
+- buka file **todo-data.service.ts** tambahkan **method setTodo**
 
 ```
-sudo npm install -g firebase-tools 
-```
-- untuk mengecek version firebase
-
-```
-firebase --version
-```
-
- - login menggunakan firebase ketik code berikut
-
- ```
- firebase login
- ```
- - akan muncul keterangan **? Allow Firebase to collect anonymous CLI usage and error reporting information?** pilih **yes**, nanti anda akan diarahkan ke account gmail anda
-
- - jika berhasil maka pada saat anda ketik **firebase login** maka akan muncul **Already logged in as akunanda@gmail.com**  **cat:jika anda ingin logout -> ketik firebase logout**
-
- - tambahkan code berikut **ket:oshop2-73960 ini adalah id project anda di firebase**
-
-```
-firebase use -- oshop2-73960
-```
-
- - selanjutnya ketik code berikut 
- 
- ```
- firebase init
- ```
- - jika berhasil maka akan muncul seperti pada gambar dibawah ini
-
-![](image/chapter1/img10.png)
-
-- pilih hosting
-- What do you want to use as your public directory? (public) dist
-- ? Configure as a single-page app (rewrite all urls to /index.html)? (y/N) yes
-
-
-- buka firebase.json tambahkan code berikut
-
-```
-{
-  "hosting": {
-     "public": "dist/oshop"
+ setTodo(usertodos: Todo[]) {
+    window.localStorage.setItem(
+      "app-todos",
+      JSON.stringify({ todos: usertodos })
+    );
   }
+  ```
+- tambahkan juga code **this.setTodo(todos);** pada mehtod **addTodos**
+- sehingga hasil keseluruhan code pada **todo-data.service.ts** sebagai berikut
+
+```
+import { Injectable } from "@angular/core";
+import { Todo } from "../class/todo";
+
+@Injectable({
+  providedIn: "root"
+})
+export class TodoDataService {
+  lastid = 0;
+  todos: Todo[] = [];
+
+  constructor() {}
+
+  addTodos(todo: Todo): TodoDataService {
+    if (!todo.id) {
+      todo.id = ++this.lastid;
+    }
+    const todos = this.getAllTodos();
+    todos.push(todo);
+    //add code
+    this.setTodo(todos);
+    return this;
+  }
+
+  getAllTodos() {
+    const storageItem = JSON.parse(window.localStorage.getItem("app-todos"));
+    if (storageItem === null) {
+      return [];
+    } else {
+      return storageItem.todos;
+    }
+  }
+
+  setTodo(usertodos: Todo[]) {
+    window.localStorage.setItem(
+      "app-todos",
+      JSON.stringify({ todos: usertodos })
+    );
+  }
+}
+
+```
+
+- buka file **app.component.ts** tambahkan **property baru dengan nama newTodo**
+
+```
+import { Component } from '@angular/core';
+import { Todo } from './class/todo';
+import { TodoDataService } from './services/todo-data.service';
+
+@Component({
+  selector: 'app-root',
+  templateUrl: './app.component.html',
+  styleUrls: ['./app.component.css']
+})
+export class AppComponent {
+
+  newTodo:Todo=new Todo();
+
+  constructor( private todoService:TodoDataService){}
+  addTodo(){}
 }
 
 
 ```
-- setelah itu ketik code ini pada terminal
+
+- buka file **app.component.html** tambahkan **ngmodel** seperti berikut
 
 ```
-ng build --prod
+<div class="col-md-5">
+          <input
+            type="text"
+            name="title"
+            [(ngModel)]="newTodo.title"
+            class="form-control"
+            placeholder="ToDo Title"
+            autocomplete="off"
+          />
+        </div>
+        <div class="col-md-5">
+          <!-- <input type="date" /> -->
+          <div class="form-group">
+            <div class="input-group">
+              <input
+                class="form-control"
+                placeholder="completion Date"
+                name="dp"
+                [(ngModel)]="newTodo.date"
+                ngbDatepicker
+                #d="ngbDatepicker"
+                autocomplete="off"
+              />
+
 ```
-
-- jika berhasil maka akan muncul folder baru dist seperti pada gambar dibawah ini
-![](image/chapter1/img11.png)
-
-
-- setelah itu deploy firebase **ketik diterminal**
+- sehingga keseluruhan code pada **app.component.html** seperti berikut
 
 ```
-firebase deploy
-```
-- jika proses deploy berhasil maka akan muncul hosting url seperti pada gambar berikut
-![](image/chapter1/img12.png)
+<div class="container">
+  <div class="row"><h2 class="title">ToDO Application</h2></div>
 
--tambahkan / pada url agar dapat menuju ke halaman web kita
-![](image/chapter1/img13.png)
+  <div class="row">
+    <form class="form-inline">
+      <div class="form-row">
+        <div class="col-md-5">
+          <input
+            type="text"
+            name="title"
+            [(ngModel)]="newTodo.title"
+            class="form-control"
+            placeholder="ToDo Title"
+            autocomplete="off"
+          />
+        </div>
+        <div class="col-md-5">
+          <!-- <input type="date" /> -->
+          <div class="form-group">
+            <div class="input-group">
+              <input
+                class="form-control"
+                placeholder="completion Date"
+                name="dp"
+                [(ngModel)]="newTodo.date"
+                ngbDatepicker
+                #d="ngbDatepicker"
+                autocomplete="off"
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-outline-secondary calendar"
+                  (click)="d.toggle()"
+                  type="button"
+                >
+                  <i class="fa fa-calendar" aria-hidden="true"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2"><button class="btn btn-primary" (click)="addTodo()">Add</button></div>
+      </div>
+    </form>
+  </div>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Date</th>
+        <th>Status</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td>Dian Inggit</td>
+        <td>05-10-1985</td>
+        <td>not complete</td>
+        <td class="icons">
+          <button class="btn btn-success"><i class="fa fa-check"></i></button>
+          <button class="btn btn-primary"><i class="fa fa-pencil"></i></button>
+          <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+```
