--- a/book/09.md
+++ b/book/09.md
@@ -1,70 +1,52 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mampu menerapkan auth dengan menggunakan google login
+- Peserta mampu membuat method addTodo
 
-# Percobaan 8 Auth With Google Login
-- Langkah pertama konfigurasi auth pada firebase
-- buka halaman firebase **https://console.firebase.google.com/project/(nama-project-anda/authentication/providers**
-- enable sign-in providers **google** seperti pada gambar dibawah ini 
-![](image/chapter2/img1.png)
-- tambahkan menu login pada **bs-navbar.component.html** untuk codenya sbb:
+# Percobaan membuat method addTodo
 
-```
-  <li class="nav-item">
-        <!-- 2.tambahkan routerlink -->
-        <a class="nav-link" routerLink="/shopping-chart">Shopping Chart</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/login">Login</a>
-      </li>
+- pada percobaan sebelumnya pada file **app.component.ts** terdapat method **appTodo**
+- method **appTodo** ini digunakan sebagai trigger saat button add pada aplikasi ditekan. sebagai contoh lakukan percobaan berikut
+- tambahkan console.log pada method appTdo
 
 ```
-- sehingga hasilnya seperti pada gambar ini
-
-![](image/chapter2/img2.png)
-
-- tambahkan code berikut pada **login.component.html** kita menambahkan **function login()**
-
-```
-<button 
-(click)="login()"
-class="btn btn-primary">Login With Goolge</button>
-
-```
-- sehingga tampilannya seperti pada gambar ini
-
-![](image/chapter2/img3.png)
-
-- buka halaman **login.component.ts** tambahkan beberapa code antara lain
--- import * as firebase from 'firebase'
--- constructor
--- function login
-- sehingga code keseluruhan pada **login.component.ts** sebagai berikut
-
-```
-import { Component } from '@angular/core';
-import * as firebase from 'firebase';
-import { AngularFireAuth} from 'angularfire2/auth';
-
-@Component({
-  selector: 'app-login',
-  templateUrl: './login.component.html',
-  styleUrls: ['./login.component.css']
-})
-export class LoginComponent {
-
-  constructor(private afAuth:AngularFireAuth) { }
-
-  login(){
-    this.afAuth.auth.signInWithRedirect(new firebase.auth.GoogleAuthProvider());
+ 
+  addTodo(){
+    console.log(this.newTodo);
   }
+```
+- jika benar saat kita klik add maka akan tampil seperti berikut
 
-}
+![](image/chapter1/img10.png)
+
+- langkah berikutnya tambahkan beberapa code pada file **app.component.ts** 
 
 ```
-- jika berhasil saat menekan tombol **login with google** maka aplikasi akan mengarahkan ke google account **masuk dengan email yang lain**
+addTodo(){
+    // console.log(this.newTodo);
+    if(this.newTodo.title && this.newTodo.date){
+      this.todoService.addTodos(this.newTodo);
+      //cek isi new todo apakah berhasil
+      console.log(this.newTodo);
+    }
+  }
+```
+- jika berhasil maka akan seperti gambar berikut
 
-![](image/chapter2/img4.png)
+![](image/chapter1/img11.png)
 
-- untuk mengecek user yang masuk melalui web dengan menggunakan login with google,kita dapat cek pada authentication users seperti pada gambar
-![](image/chapter2/img5.png)
+- buka pada application disitu data untuk sementara tersimpan di localStorage
+
+![](image/chapter1/img12.png)
+
+- tambahkan beberapa code agar pada saat setelah di klik add, inputan menjadi kosong kembali **cat:di app.component.ts**
+
+```
+ addTodo(){
+    // console.log(this.newTodo);
+    if(this.newTodo.title && this.newTodo.date){
+      this.todoService.addTodos(this.newTodo);
+      //cek isi new todo apakah berhasil
+      // console.log(this.newTodo);
+      this.newTodo.title='';
+      this.newTodo.date='';
+```
