--- a/book/04.md
+++ b/book/04.md
@@ -1,107 +1,83 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mampu membuat sebuah component
+- Peserta mampu membuat Table untuk TODO
 
-# Percobaan 3 Membuat Component baru
+# Percobaan Membuat table TODO 
 
-### Membuat component bs-navbar
-- langkah pertama memisahkan antara container dengan navbar pada app.component sehingga membutuhkan sebuah component baru
-- untuk membuat sebuah component lakukan code berikut:
-```
-ng g c bs-navbar
-```
-- keterangan 
-  - g = generate
-  - c = component
-  - bs-navbar = nama folder yang akan kita generate
-- jika berhasil membuat component maka selanjutnya copy bagian navbar pada **app.component.ts**  ke **bs-navbar.component.html** pada **(oshop/src/bs-navbar/bs-navbar.component.html)** seperti code dibawah ini
+- buka file **app.component.html** tambahkan class table
 
 ```
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<div class="container">
+  <div class="row"><h2 class="title">ToDO Application</h2></div>
 
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+  <div class="row">
+    <form class="form-inline">
+      <div class="form-row">
+        <div class="col-md-5">
+          <input
+            type="text"
+            name="title"
+            class="form-control"
+            placeholder="ToDo Title"
+            autocomplete="off"
+          />
         </div>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        <div class="col-md-5">
+          <!-- <input type="date" /> -->
+          <div class="form-group">
+            <div class="input-group">
+              <input
+                class="form-control"
+                placeholder="completion Date"
+                name="dp"
+                ngbDatepicker
+                #d="ngbDatepicker"
+                autocomplete="off"
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-outline-secondary calendar"
+                  (click)="d.toggle()"
+                  type="button"
+                >
+                  <i class="fa fa-calendar" aria-hidden="true"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2"><button class="btn btn-primary">Add</button></div>
+      </div>
     </form>
   </div>
-</nav>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Date</th>
+        <th>Status</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td>Dian Inggit</td>
+        <td>05-10-1985</td>
+        <td>not complete</td>
+        <td class="icons">
+          <button class="btn btn-success"><i class="fa fa-check"></i></button>
+          <button class="btn btn-primary"><i class="fa fa-pencil"></i></button>
+          <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 ```
-- sehingga pada **app.component.html** hanya berisi code berikut 
 
-```
-<div class="container">
-
-  <div class="starter-template">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-  </div>
-</div><!-- /.container -->
-```
-- langkah berikutnya mengkonfigurasi pada **bs-navbar.component.ts**
-- rubah **selector** pada **bs-navbar.component.ts** pada **(oshop/src/bs-navbar/bs-navbar.component.ts)** menjadi  **bs-navbar** sehingga keseluruhan code pada **bs-navbar.component.ts** 
-
-```
-import { Component, OnInit } from '@angular/core';
-
-@Component({
-  selector: 'bs-navbar',
-  templateUrl: './bs-navbar.component.html',
-  styleUrls: ['./bs-navbar.component.css']
-})
-export class BsNavbarComponent implements OnInit {
-
-  constructor() { }
-
-  ngOnInit() {
-  }
-
-}
-
-```
-- langkah berikutnya setelah kita rubah selector **selector** pada **bs-navbar.component.ts** maka selanjutnya tambahkan code berikut pada **app.component.ts**
-
-```
-<bs-navbar></bs-navbar>
-
-```
-- sehingga code secara keseluruhan pada  **app.component.ts**
-
-```
-<bs-navbar></bs-navbar>
-
-<div class="container">
-
-  <div class="starter-template">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-  </div>
-</div><!-- /.container -->
-
-```
-- jika berhasil maka tampilannya seperti pada gambar
-![](image/chapter1/img5.png)
+- jika berhasil maka hasilnya seperti pada gambar berikut
+![](image/chapter1/img8.png)
