--- a/book/10.md
+++ b/book/10.md
@@ -1,68 +1,82 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mampu membuat proses logout
+- Peserta mampu menampilkan isi dari inputan TODO yang tersimpan di localstorage
 
-# Percobaan 9 Logout
-- buka halaman **bs-navbar.component.html** tambahkan function click pada logout, code sbb
+# Percobaan View
+
+- buka file **app.component.ts** tambahkan method get
 
 ```
- <a class="dropdown-item" (click)="logout()"> Log Out</a>
- ```
- - buka halaman **bs-navbar.component.ts** buat function click pada **bs-navbar.component.ts** , code sbb
+ get todos(){
+    return this.todoService.getAllTodos();
+  }
+```
+
+- sehingga keseluruhan code pada **app.component.ts** seperti berikut
 
 ```
 import { Component } from '@angular/core';
-import { AngularFireAuth} from 'angularfire2/auth';
+import { Todo } from './class/todo';
+import { TodoDataService } from './services/todo-data.service';
 
 @Component({
-  selector: 'bs-navbar',
-  templateUrl: './bs-navbar.component.html',
-  styleUrls: ['./bs-navbar.component.css']
+  selector: 'app-root',
+  templateUrl: './app.component.html',
+  styleUrls: ['./app.component.css']
 })
-export class BsNavbarComponent {
+export class AppComponent {
 
-  constructor(private afAuth:AngularFireAuth) { }
+  newTodo:Todo=new Todo();
 
-  logout(){
-    this.afAuth.auth.signOut();
+  constructor( private todoService:TodoDataService){}
+
+  get todos(){
+    return this.todoService.getAllTodos();
   }
-}
 
- ```
-
- - jika kita logout maka tidak ada perubahan, untuk mengetahui perubahan pada saat di logout maka tambahkan code berikut pada **constructor(private afAuth:AngularFireAuth)**
-
-```
-afAuth.authState.subscribe(x=>console.log(x));
-```
- - sehingga hasil keseluruhan codenya sebagai berikut
-
-```
-import { Component } from '@angular/core';
-import { AngularFireAuth} from 'angularfire2/auth';
-
-@Component({
-  selector: 'bs-navbar',
-  templateUrl: './bs-navbar.component.html',
-  styleUrls: ['./bs-navbar.component.css']
-})
-export class BsNavbarComponent {
-
-  constructor(private afAuth:AngularFireAuth) {
-    
-    afAuth.authState.subscribe(x=>console.log(x));
-   }
-  logout(){
-    this.afAuth.auth.signOut();
+  addTodo(){
+    // console.log(this.newTodo);
+    if(this.newTodo.title && this.newTodo.date){
+      this.todoService.addTodos(this.newTodo);
+      //cek isi new todo apakah berhasil
+      // console.log(this.newTodo);
+      this.newTodo.title='';
+      this.newTodo.date='';
+    }
   }
 }
 ```
- - langkah berikutnya **inspect element** pilih console **terlebih dahulu login with google**
 
- - pada saat kondisi user masih belum logout seperti pada gambar berikut **terdapat beberapa informasi**
+- buka file **app.component.html** tambahkan ngif dan ngfor pada **table** 
 
-![](image/chapter2/img6.png)
+```
+  <table class="table" *ngIf="todos.length>0">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Date</th>
+        <th>Status</th>
+        <th>Options</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let todo of todos">
+        <td></td>
+        <td>{{todo.title}}</td>
+        <td>{{todo.date.day}}-{{todo.date.month}}-{{todo.date.year}}</td>
+        <td *ngIf="!todo.complete"> not complete</td>
+        <td *ngIf="todo.complete"> complete</td>
+        <td class="icons">
+          <button class="btn btn-success"><i class="fa fa-check"></i></button>
+          <button class="btn btn-primary"><i class="fa fa-pencil"></i></button>
+          <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+```
 
-- pada saat kondisi user masih sudah logout seperti pada gambar berikut **null**
+- jika benar maka akan seperti pada gambar dibawah ini **akan menampilkan isi array pada localstorage**
 
-![](image/chapter2/img7.png)
+![](image/chapter1/img13.png)
