--- a/book/11.md
+++ b/book/11.md
@@ -1,6 +1,6 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mampu menampilkan user yang Login saat ini pada navbar
+- Peserta mampu membuat method getTodoById
 
 # Percobaan 
 - buka file **todo-data.service.ts** tambahkan method **getTodoById**
